<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popUp_position"
    tools:context="com.ineedserv.medical.fragments.LocalizacionOfertantes">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        tools:context="tech.ineed.ineed.fragments.LocalizacionOfertantes" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_servicios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@color/md_red_600"
            android:ems="55"
            android:hint="@string/ofertantesQneed"
            android:textColorHighlight="@color/md_red_600"
            android:textColorHint="@color/md_red_600"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:theme="@style/Autocomplete" />

        <Button
            android:id="@+id/limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:onClick="clear"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/ofertanteslimpiar" />

    </LinearLayout>

    <TextView
        android:id="@+id/valor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seek"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/md_red_600"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/ofertantesdist" />

    <SeekBar
        android:id="@+id/seek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/botones"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp"
        android:max="50"
        android:progress="5"
        android:progressDrawable="@drawable/custom_progress"/>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <!--android:background="@drawable/toolbar_bg"-->
        <Button
            android:id="@+id/botonSolocitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/ofertantesbtn"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonVerSolicitudes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:onClick="cargaSolicitudes"
            app:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/ofertantesbtn2"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
